# gtest_smi

./: CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt
lib/smi/: amd_smi_driver.hpp  common.hpp  data_collector.hpp  processor.hpp  service.hpp
tests/: CMakeLists.txt  amd_smi_test.cpp
tests/smi/: processor_tests.cpp  service_tests.cpp
